--- a/Example/SSSlider/Base.lproj/Main.storyboard
+++ b/Example/SSSlider/Base.lproj/Main.storyboard
@@ -59,11 +59,18 @@
                                     <userDefinedRuntimeAttribute type="color" keyPath="valueViewBackgroundColor">
                                         <color key="value" red="0.56862745100000001" green="0.73333333329999995" blue="0.08235294118" alpha="1" colorSpace="calibratedRGB"/>
                                     </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="orientionRaw">
-                                        <integer key="value" value="0"/>
-                                    </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="thickness">
                                         <real key="value" value="15"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isContinuous" value="NO"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="orientationRaw">
+                                        <integer key="value" value="0"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="duration">
+                                        <real key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="value">
+                                        <real key="value" value="0.10000000000000001"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
@@ -106,11 +113,14 @@
                                     <userDefinedRuntimeAttribute type="color" keyPath="valueViewBackgroundColor">
                                         <color key="value" red="0.56862745100000001" green="0.73333333329999995" blue="0.08235294118" alpha="1" colorSpace="calibratedRGB"/>
                                     </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="orientionRaw">
-                                        <integer key="value" value="1"/>
-                                    </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="thickness">
                                         <real key="value" value="15"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="orientationRaw">
+                                        <integer key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="value">
+                                        <real key="value" value="0.29999999999999999"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
@@ -153,23 +163,39 @@
                                     <userDefinedRuntimeAttribute type="color" keyPath="valueViewBackgroundColor">
                                         <color key="value" red="0.56862745100000001" green="0.73333333329999995" blue="0.08235294118" alpha="1" colorSpace="calibratedRGB"/>
                                     </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="orientionRaw">
-                                        <integer key="value" value="2"/>
-                                    </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="thickness">
                                         <real key="value" value="15"/>
                                     </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="orientationRaw">
+                                        <integer key="value" value="2"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="value">
+                                        <real key="value" value="0.29999999999999999"/>
+                                    </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Ef-61-MnE">
+                                <rect key="frame" x="137" y="50" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="SVy-5j-Fvq"/>
+                                    <constraint firstAttribute="width" constant="100" id="bcP-DR-5Ym"/>
+                                </constraints>
+                                <state key="normal" title="Change value"/>
+                                <connections>
+                                    <action selector="didTouchChangeValue:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="mpg-R5-Rba"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="Khn-7V-aZQ" secondAttribute="trailing" constant="20" id="U8V-3J-3Cz"/>
+                            <constraint firstItem="6Ef-61-MnE" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="30" id="XIz-va-7eQ"/>
                             <constraint firstItem="Khn-7V-aZQ" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="20" id="YWd-tU-iEk"/>
                             <constraint firstItem="zyV-HO-6pu" firstAttribute="top" secondItem="Khn-7V-aZQ" secondAttribute="bottom" constant="70" id="cU3-9e-t0V"/>
                             <constraint firstItem="GJp-RL-m1K" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" constant="-100" id="dpX-Ax-X9f"/>
                             <constraint firstItem="zyV-HO-6pu" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" constant="100" id="f2d-MZ-iSW"/>
                             <constraint firstItem="Khn-7V-aZQ" firstAttribute="centerY" secondItem="kh9-bI-dsS" secondAttribute="centerY" constant="-150" id="hi5-dq-gEV"/>
+                            <constraint firstItem="6Ef-61-MnE" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="pvQ-Hu-CRJ"/>
                             <constraint firstItem="GJp-RL-m1K" firstAttribute="centerY" secondItem="zyV-HO-6pu" secondAttribute="centerY" id="spo-Hl-bh5"/>
                         </constraints>
                     </view>
